# unrealHKU

./: .gitattributes  .gitignore  README.md  TelecomTwin.uproject  diag.py  fix_cam.py  fix_lights.py  fly_to_shanghai.py  goto_venue.py  pyproject.toml  run_signal_ray_demo.py  run_signal_ray_demo_direct.py  setup_beams.py  setup_bright.py  setup_scene.py  setup_v3.py  setup_v4.py
Config/: DefaultEditor.ini  DefaultEngine.ini  DefaultPlugins.ini
Config/SignalSimulation/: default_scenario.json  signal-frame.schema.json
Content/Maps/: shanghai.umap  shanghai_HLOD0_Instancing.uasset
Content/Materials/: MI_DarkBuilding.uasset  M_BS_Blue.uasset  M_BS_Green.uasset  M_BS_Orange.uasset  M_Cover_Blue.uasset  M_Cover_Green.uasset  M_Cover_Orange.uasset  M_DarkGlass.uasset  M_Flow_White.uasset  M_Glow_Cyan.uasset  M_Glow_Green.uasset  M_Glow_Orange.uasset  M_Hex_Cyan.uasset  M_User_Blue.uasset  M_User_Green.uasset  M_User_Red.uasset  M_User_Yellow.uasset
Content/MiarmyExperiment/: MiarmyResourceDemo.umap
Content/Python/: init_unreal.py  telecom_signal_ray_menu.py
Content/TT/: M_micro.uasset
Content/TT5/: M5_crowd_browsing.uasset  M5_crowd_gaming.uasset  M5_crowd_social.uasset  M5_crowd_video.uasset  M5_macro.uasset  M5_micro.uasset  M5_venue.uasset
Docs/: CitySampleCrowds_UE57_Integration.md  HongKongCrowdDemo.md  OpenMassCrowdDependencies.md  OpenMassCrowd_UE57_HongKong_Demo.md  PDF_ISSUES_1_3_VERIFICATION.md  PDF_ISSUE_4_THREE_HEIGHT_POINTS.md
Docs/Obsidian/: TelecomTwin_CitySample_30_Pedestrian_Demo.md
Source/: TelecomTwin.Target.cs  TelecomTwinEditor.Target.cs
(+11585 files in other folders)
